Add export functionality and some improvment

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
   text-decoration: none;
 }
 
-#quoteBtn {
+#quoteBtn , #download {
   padding: 8px 15px;
   border-radius: 10px;
   background-color: var(--black);
